--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,6 +1,6 @@
 <div class="content" id="home">
   <div id="sidebar-button">
-    <img src="/images/sidebar-button.png">
+    <img src="images/sidebar-button.png">
   </div>
   <div id="post-info">
     <div id="cover-photo-container">
