--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,1 +1,35 @@
-<!--This is where archive goes-->
+<div class="content" id="home">
+  <div id="sidebar-button">
+    <img src="/pg/images/sidebar-button.png">
+  </div>
+  <div id="post-info">
+    <div id="cover-photo-container">
+      <img id="cover-photo" src="/pg/images/{{ page.cover }}">
+    </div>
+
+    <div id="info-container">
+      <h1 id="title">{{ page.title }}</h1>
+      <br>
+    </div>
+
+  {% for post in site.tags.archive %}
+    <a href="{{post-link}}">
+    <div class="post">
+      <span id="a-title">{{ post.title }}</span>
+      <span id="a-date">{{ post.date | date_to_string }}</span>
+    </a>
+      <div id="a-content">{{ post.excerpt | remove: '<h2>' | remove: '</h2>' }}</div> 
+    </div>
+  {% endfor %}
+  </div>
+  <div class="colophon">
+    <p>
+    {% for post in site.tags.archive %}
+      <span id="pub-date">Last Updated on {{ post.date | date_to_string }}</span> <span class="separator">&bull;</span>
+      <span id="social">Find me on <a href="https://twitter.com/ElijahCaineMV">Twitter</a>!</span>
+    {% break %}
+    {% endfor %}
+    </p>
+  </div>
+
+</div>
