--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
       <meta name="viewport" content="width=device-width">
 
       <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/pg/css/syntax.css">
+      <link rel="stylesheet" href="/css/syntax.css">
 
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="/pg/css/main.css">
+      <link rel="stylesheet" href="/css/main.css">
 
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/pg/css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css">
 
       <!-- Google Fonts -->
       <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
@@ -23,21 +23,21 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <h1 class="title"><a href="/pg/"><img id="logo" src="/pg/images/logo.png"></a></h1>
+          <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
           <span class="tagline">Elijah Caine</span>
         </div>
         <div class="posts">
           <ul class="posts-list">
             {% for post in site.tags.top %}
               <li class="post-link">
-                <a class="post-title" href="/pg{{ post.url }}">
+                <a class="post-title" href="{{ post.url }}">
                   <span class="post-date">{{ post.date | date_to_string }}</span>
                   {{ post.title }}
                 </a>
               </li>
             {% endfor %}
             <li class="post-link">
-              <a class="post-title" href=/pg/archive/>
+              <a class="post-title" href=/archive/>
                 <span class="post-date">———————</span>
                 The Rest
               </a>
@@ -46,10 +46,10 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="/pg/archive/" class="footer-link">Archive</a> <span class="separator"> | </span>
+            <a href="/archive/" class="footer-link">Archive</a> <span class="separator"> | </span>
             <a href="https://twitter.com/ElijahCaineMV" class="footer-link">Twitter</a> <span class="seperator"> | </span>
             <a href="https://github.com/ElijahCaine" class="footer-link">Github</a> <span class="separator"> | </span>
-            <a href="/pg/about/" class="footer-link">About</a>
+            <a href="/about/" class="footer-link">About</a>
           </span>
         </div>
       </div>
@@ -57,6 +57,6 @@
         {{ content }}
 
     </div>
-    <script src="/pg/scripts/responsive.js" type="text/javascript"></script>
+    <script src="/scripts/responsive.js" type="text/javascript"></script>
   </body>
 </html>
