--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,9 @@
         <div class="footer">
           <span id="footer-links">
             <a href="/archive/" class="footer-link">Archive</a> <span class="separator"> | </span>
-            <a href="https://twitter.com/ElijahCaineMV" class="footer-link">Twitter</a> <span class="seperator"> | </span>
-            <a href="https://github.com/ElijahCaine" class="footer-link">Github</a> <span class="separator"> | </span>
-            <a href="/about/" class="footer-link">About</a>
+            <a href="/about/" class="footer-link">About</a> <span class="separator"> | </span>
+            <a href="https://www.youtube.com/channel/UCu_v4NrEn7up3ikwHlruAVA" class="footer-link">YouTube</a> <span class="seperator"> | </span>
+            <a href="https://github.com/ElijahCaine" class="footer-link">Github</a>
           </span>
         </div>
       </div>
