Pushing before I fall asleep Started adding project52 posts for backlog Recreating them as faithfully as possible Got through first three

--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -18,7 +18,7 @@
       <span id="a-title">{{ post.title }}</span>
       <span id="a-date">{{ post.date | date_to_string }}</span>
     </a>
-      <div id="a-content">{{ post.excerpt | remove: '<h2>' | remove: '</h2>' }}</div> 
+      <div id="a-content">{{ post.snippet | markdownify }}</div> 
     </div>
   {% endfor %}
   </div>
