--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,9 @@
         <div class="footer">
           <span id="footer-links">
             <a href="/archive/" class="footer-link">Archive</a> <span class="separator"> | </span>
-            <a href="/about/" class="footer-link">Info</a> <span class="separator"> | </span>
+            <a href="http://elijahcaine.me/resume/" class="footer-link">Resume</a> <span class="separator"> | </span>
             <a href="https://www.youtube.com/channel/UCu_v4NrEn7up3ikwHlruAVA" class="footer-link">YouTube</a> <span class="seperator"> | </span>
+            <a href="http://elijahcaine.me" class="footer-link">Main</a> <span class="seperator"> | </span>
             <a href="https://github.com/ElijahCaine" class="footer-link">Github</a>
           </span>
         </div>
