--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,13 @@
             <li class="post-link">
               <a class="post-title" href=/archive/>
                 <span class="post-date">———————</span>
-                The Rest
+                Blog Archive
               </a>
             </li>
           </ul>
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="/archive/" class="footer-link">Archive</a> <span class="separator"> | </span>
             <a href="http://elijahcaine.me/resume/" class="footer-link">Resume</a> <span class="separator"> | </span>
             <a href="https://www.youtube.com/channel/UCu_v4NrEn7up3ikwHlruAVA" class="footer-link">YouTube</a> <span class="seperator"> | </span>
             <a href="http://elijahcaine.me" class="footer-link">Main</a> <span class="seperator"> | </span>
