updated book comment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <span title="What I'm Reading">
+            <span title="What I'm Reading: Zen and the Art of Motorcycle Maintenance by Robert M. Pirsig">
           <h1 class="title"><a href="/"><img id="logo" src="/images/logo.jpg"></a></h1>
           </span>
           <span class="tagline">Elijah Caine</span>
