Added credit for Sam Hall default Cover Photo

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -18,7 +18,7 @@
   <div class="colophon">
     <p>
       <span id="pub-date">Last Updated on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
-      <span id="social">Find me on <a href="https://twitter.com/ElijahCaineMV">Twitter</a>!</span>
+      <span id="pub-date">Default <a href="https://www.flickr.com/photos/123432654@N05/14293682625/">Cover Photo</a> by <a href="https://www.flickr.com/photos/123432654@N05/">Sam Hall</a></span>
     </p>
   </div>
 </div>
