Added archive functionality
also extended templates to be more maintainable (and sane)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #container {
     width: 95%;
-    max-width: 675px;
+    max-width: 800px;
     font-family: monospace;
     margin: 0 auto;
     color: black;
@@ -8,27 +8,34 @@
 }
 
 header {
-	width: 100%;
-	text-align: center;
-	border-bottom-style: dotted;
+    width: 100%;
+    text-align: center;
+    border-bottom-style: dotted;
 }
 
 article {
-    width: 63%;
-	float: right;
+    width: 70%;
+    float: right;
 }
 
 nav {
-    width: 35%;
-	float: left;
+    width: 29%;
+    float: left;
 }
 
 footer {
-	border-top-style: dotted;
-	width: 100%;
-	display: flex;
+    border-top-style: dotted;
+    width: 100%;
+    display: flex;
 }
 
 img {
-	width: 100%;
+    width: 100%;
+}
+
+h1 cite {
+    color: #FFF;
+    background: #222;
+    padding-left: 4px;
+    padding-right: 4px;
 }
