--- a/archive.jinja
+++ b/archive.jinja
@@ -4,7 +4,7 @@
 <article>
 <h1>Archive</h1>
 <ul>
-{% for p in page_list %}
+{% for p in navigation %}
     <li>
     <a href="{{ p['url'] }}"> {{ p['title'] }} </a>
     </li>
