--- a/template.jinja
+++ b/template.jinja
@@ -26,7 +26,7 @@
     {% if loop.index <= archive_cutoff %}
     {% if e['url'] != '/index/' %}
     <li>
-    <a href="{{ e['url'] }}"> {{ e['title'] }} </a>
+    <a href="/{{ e['url'] }}"> {{ e['title'] }} </a>
     </li>
     {% endif %}
     {% endif %}
