Changed title of page becuase reasons?

--- a/templates/template.jinja
+++ b/templates/template.jinja
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 
-<title>A Test Run</title>
+<title>A Blog-ey Kinda Thing</title>
 <link rel='stylesheet' type='text/css' href='style.css'>
 
 </head>
