Started using new cover image. (sam hall)++

--- a/templates/template.jinja
+++ b/templates/template.jinja
@@ -13,7 +13,7 @@
 
 <header>
 <a href='/'>
-<img src='http://share.elijahcaine.me/blog_cover.jpg' class='header'></img>
+<img src='https://farm6.staticflickr.com/5813/20476814090_97752519fb_o.jpg' class='header'></img>
 </a>
 </header>
 
